# SociEntityFramework

./: .gitignore  CMakeLists.txt  LICENSE
src/: entity.h  entitycreator.cpp  entitycreator.h  main.cpp  processdatabase.cpp  processdatabase.h  query.cpp  query.h  querymysql.cpp  querymysql.h  queryodbc.cpp  queryodbc.h  repositorycreator.cpp  repositorycreator.h  util.hpp
